<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UES21 Ejercicio Feedback</string>
    <string name="title_activity_travel">Travel Activity</string>
    <!-- <string name="action_settings">Settings</string> -->
    <string name="city">City:</string>
    <string name="year">Year:</string>
    <string name="comments">Comments:</string>
    <string name="title_activity_edit_travel">Edit Travel Activity</string>
    <string name="country">Country:</string>    
    <!-- <string name="city_name">City Name:</string> -->
    <string name="button_send">Send</string>
    <string name="button_cancel">Cancel</string>
    <string name="new_visit_text">New visit:</string>
    <string name="menu_new_travel">New Travel</string>
    <string name="edit_travel">Edit Travel</string>
    <string name="delete_travel">Delete Travel</string>  
    <string name="error_message_bad_year_format">Please, enter a number on the "year" field.</string>
    <string name="error_message_empty_year">Year is required.</string>  
    <string name="error_message_empty_city">City name is required.</string> 
    <string name="error_message_empty_country">Country is required.</string>   

</resources>
